--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@primevue/auto-import-resolver": "^4.1.1",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.16.11",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^6.2.3",
     "typescript": "~5.5.4",
+    "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.8",
     "vue-tsc": "^2.1.6"
   }
