--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@primevue/themes": "^4.1.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.1.1",
+    "tailwindcss-primeui": "^0.3.4",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
@@ -23,7 +24,10 @@
     "@types/node": "^20.16.11",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.20",
     "npm-run-all2": "^6.2.3",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "typescript": "~5.5.4",
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.8",
