--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "vue-website",
+	"homepage": "https://github.com/begli-amanov/vue-website.git",
 	"version": "0.0.0",
 	"private": true,
 	"type": "module",
