--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vue-website",
 	"homepage": "https://github.com/begli-amanov/vue-website.git",
 	"version": "0.0.0",
-	"private": true,
+	"private": "false",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
